[package]
edition = "2021"
name = "beaconchain-prometheus-exporter"
version = "0.1.0"

[dependencies]
env_logger = "0.9.0"
log = "0.4.14"
prometheus_exporter = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.59", features = ["raw_value"] }
tokio = { version = "1", features = ["full"] }